<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="initial_value">0</string>
    <string name="buacText">AC</string>
    <string name="buplusminusText">+/-</string>
    <string name="buperText">%</string>
    <string name="budivText">/</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="bumulText">*</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="buminusText">-</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="plusText">+</string>
    <string name="zeroText">0</string>
    <string name="dotText">.</string>
    <string name="equalsText">=</string>
</resources>